--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     />
   </head>
   <body>
+    <h1>My Headings</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
